Add post and such

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,21 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-<<<<<<< HEAD
-    <title>Title</title>
-=======
     <title>:: Printers ::</title>
 
     <script src="js/main.js"></script>
->>>>>>> Add vanilla js xmlHttpRequest
-
 
 </head>
 <body>
 
-<<<<<<< HEAD
 <script src="js/main.js"></script>
-=======
 RESULT SERVER as JSON string: <div id=demo></div>
 
 <button onclick="getData()">getData 'all printers'</button>
@@ -24,6 +17,14 @@ RESULT SERVER as JSON string: <div id=demo></div>
 
 After click see console.log
 
->>>>>>> Add vanilla js xmlHttpRequest
+<h3>Printer</h3>
+<label for="type">Type
+    <input type="text" id="type" />
+</label>
+<label for="price">Price
+    <input type="text" id="price" />
+</label>
+<hr />
+<button onclick="sendPrinter();">Verstuur</button>
 </body>
 </html>
