--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8">
     <title>:: Printers ::</title>
 
-    <script src="js/main.js"></script>
-
 </head>
 <body>
 
-<script src="js/main.js"></script>
-RESULT SERVER as JSON string: <div id=demo></div>
+RESULT SERVER as JSON string:
+<div id=demo></div>
 
 <button onclick="getData()">getData 'all printers'</button>
 
@@ -19,12 +17,14 @@ After click see console.log
 
 <h3>Printer</h3>
 <label for="type">Type
-    <input type="text" id="type" />
+    <input type="text" id="type"/>
 </label>
 <label for="price">Price
-    <input type="text" id="price" />
+    <input type="text" id="price"/>
 </label>
-<hr />
+<hr/>
 <button onclick="sendPrinter();">Verstuur</button>
+
+<script src="js/main.js"></script>
 </body>
 </html>
